# django-auth-proof

./: README.md  docker-compose.yml  manage.py  pyproject.toml
django_auth_proof/: asgi.py  settings.py  urls.py  wsgi.py
django_auth_proof/account/: admin.py  apps.py  urls.py
django_auth_proof/account/forms/: __init__.py  user_change_form.py  user_creation_form.py
django_auth_proof/account/migrations/: 0001_initial.py
django_auth_proof/account/models/: __init__.py  modelos.py  user.py
django_auth_proof/account/templates/: navbar.html  user_create.html  user_login.html  user_profile.html  user_update.html
django_auth_proof/account/views/: __init__.py  user_create_view.py  user_login_view.py  user_logout_view.py  user_profile_view.py  user_update_view.py
docker/: Dockerfile  nginx.conf
