[tool.poetry]
name = "django-auth-proof"
version = "0.1.0"
description = "Proof of concept for a robust Django authentication system, featuring optional Google login, ideal for advanced developers."
authors = ["Samuel Sublate <samuelsublate.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
